--- a/src/.env.development
+++ b/src/.env.development
@@ -2,3 +2,5 @@ PORT=3000
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce-develop
 adminName=pablonahraDev
 adminPassword=C0d3rh0us3D3v
+persistence=MONGO
+# persistence=FS
