--- a/src/.env.production
+++ b/src/.env.production
@@ -2,3 +2,5 @@ PORT=8080
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce
 adminName=pablonahra
 adminPassword=C0d3rh0us3
+persistence=MONGO
+# persistence=FS
