--- a/src/.env.development
+++ b/src/.env.development
@@ -1,3 +1,4 @@
+NODE_ENV=development
 PORT=3000
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce-develop
 adminName=pablonahraDev
