--- a/src/.env.production
+++ b/src/.env.production
@@ -1,3 +1,4 @@
+NODE_ENV=production
 PORT=8080
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce
 adminName=pablonahra
