--- a/src/.env.production
+++ b/src/.env.production
@@ -4,4 +4,7 @@ MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommer
 adminName=pablonahra
 adminPassword=C0d3rh0us3
 persistence=MONGO
-# persistence=FS
+MAILING_SERVICE=gmail
+MAILIG_PORT=587
+MAILING_USER=pablonahra@pnahra.com
+MAILING_PASSWORD="vlrw gfog lxeh lvqc"
