Politica de roles aplicada en Auth: applyPolicies

--- a/src/.env.development
+++ b/src/.env.development
@@ -4,4 +4,7 @@ MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommer
 adminName=pablonahraDev
 adminPassword=C0d3rh0us3D3v
 persistence=MONGO
-# persistence=FS
+MAILING_SERVICE=gmail
+MAILING_PORT=587
+MAILING_USER=pablonahra@pnahra.com
+MAILING_PASSWORD="vlrw gfog lxeh lvqc"
