--- a/src/.env.production
+++ b/src/.env.production
@@ -5,6 +5,6 @@ adminName=pablonahra
 adminPassword=C0d3rh0us3
 persistence=MONGO
 MAILING_SERVICE=gmail
-MAILIG_PORT=587
+MAILING_PORT=587
 MAILING_USER=pablonahra@pnahra.com
 MAILING_PASSWORD="vlrw gfog lxeh lvqc"
