--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "mocha src/test/supertest.test.js"
   },
   "keywords": [],
