--- a/src/.env.production
+++ b/src/.env.production
@@ -1,4 +1,5 @@
 NODE_ENV=production
+API_URL=http://localhost:8080
 PORT=8080
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce
 adminName=pablonahra
