--- a/src/.env.development
+++ b/src/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
+API_URL=http://localhost:3000
 PORT=3000
 MONGO_URL=mongodb+srv://pablonahra:coder123@cluster0.9wbkiz3.mongodb.net/ecommerce-develop
 adminName=pablonahraDev
